--- a/_posts/2019-12-29-the-us-narrative-today.html
+++ b/_posts/2019-12-29-the-us-narrative-today.html
@@ -119,5 +119,108 @@ stories:
   state: Iowa
   domain: http://www.clintonherald.com/
   link: https://www.clintonherald.com/region/officials-confirm-no-survivors-from-hawaii-helicopter-crash/article_8f48891d-7044-590e-af06-0d5e17df8017.html
+images:
+- name: birdhouse-birdhouse-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-cinnamon-rolls.jpg
+- name: downtown-trucksilo-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-blue-granite.jpg
+- name: power-lines-power-lines-empty-space-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-diego-rivera1.jpg
+- name: art-museum-art-museum-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-ww2-dresden.jpg
+- name: stories-4882162452-fa3126b38d-b-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-4882162452-fa3126b38d-b-spagetti-accident.jpg
+- name: sand-hand-sand-hand-jap-dys-1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-jap-dys-1.jpg
+- name: paris-paris-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-dark-rain.jpg
+- name: copper-circuit-IMG_7831.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-IMG_7831.jpg
+- name: statue-of-liberty-front-view-statueofliberty-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-monet-one.jpg
+- name: christianity-christianity-under-construction-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-matrix.jpg
+- name: nazi-invasion-border-fence-down-the-line.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-border-fence-down-the-line.jpg
+- name: razorcliff-razorcliff-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-clean-view.jpg
+- name: razorcliff-razorcliff-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-emily-carr.jpg
+- name: razorcliff-razorcliff-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-atari-asteroids.jpg
+- name: eduardo-eduardo-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-neo-instinct.jpg
+- name: downtheline-downtheline-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-dry-skin.jpg
+- name: art-museum-art-museum-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-crunch-paper.jpg
+- name: dragon-desert-desert-dragon-copper-circuit-2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-copper-circuit-2.jpg
+- name: redondo-beach-harbor-redondo-beach-harbor-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor-blue-granite.jpg
+- name: dragon-desert-desert-dragon-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-gan-vogh.jpg
+- name: paris-paris-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-crunch-paper.jpg
+- name: yosemite-yosemite-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-emily-carr.jpg
+- name: statue-of-liberty-front-view-statueofliberty-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-smooth-ride.jpg
+- name: capital-battle-capitolbattle-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-colored-circuits.jpg
+- name: capital-battle-capitolbattle-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-crabapple.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-clean-view.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-clean-view.png
+- name: rockingchair-rockingchair-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-alberto-giacometti.jpg
+- name: bf-skinner-waterfront-in-italy-mist.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-waterfront-in-italy-mist.jpg
+- name: server-cloud-server-racks-door-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-hot-spicy.jpg
+- name: birdhouse-birdhouse-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-really-hot.jpg
+- name: bluelake-post-modern-file-00-01-17-38.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-post-modern-file-00-01-17-38.jpg
+- name: bf-skinner-dark-tower-of-london.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-dark-tower-of-london.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-kandinsky-bv.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-kandinsky-bv.png
+- name: blossombar-sand-paper-file-00-00-24-99.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-sand-paper-file-00-00-24-99.jpg
+- name: gypsymosaic-gypsy-eyes-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-clean-view.jpg
+- name: nazi-invasion-glass-ball-downtown.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-glass-ball-downtown.jpg
+- name: crow-crow-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-blue-circuit.jpg
+- name: aws-s3-stories-gears-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-gears-smoking-cigarette.jpg
+- name: mosaic-face-mosaic-face-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-neo-instinct.jpg
+- name: rockingchair-rockingchair-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-cinnamon-rolls.jpg
+- name: la-muse-christ-cross-chalice.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-christ-cross-chalice.jpg
+- name: rockingchair-rockingchair-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-sunday.jpg
+- name: sand-hand-sand-hand-propaganda-leaflets.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-propaganda-leaflets.jpg
+- name: machine-road-machine-road-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-space-pizza.jpg
+- name: yosemite-yosemite-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-far-away.jpg
+- name: bluelake-cinnamon-rolls-file-00-01-17-38.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-cinnamon-rolls-file-00-01-17-38.jpg
+- name: redondo-beach-harbor-redondo-beach-harbor-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor-colorful-dream.jpg
+- name: window-window-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-colored-circuits.jpg
+- name: nazi-invasion-crypto-wheels-old-compute-bletchley.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-crypto-wheels-old-compute-bletchley.jpg
+- name: trucksilo-trucksilo-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-dark-soul.jpg
+- name: mosaic-face-mosaic-face-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-atari-missle.jpg
 ---
 Camden Cove Employees Take Home Awards.&nbsp;Nicholls St West Virginia Basketball.&nbsp;Saturday's Girls Basketball Results.&nbsp;Trump Retweets Post Naming Alleged Whistleblower.&nbsp;Badgers Brace For Oregon Defensive End Kayvon Thibodeaux.&nbsp;Alexandria Church, School Await New Beginning After Tornado.&nbsp;Mason City Students Make Blankets For Younger Children.&nbsp;Get Into Winter  On Snowshoes.&nbsp;
